# blink-reminder

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  package-macos.sh
.github/workflows/: build.yml
src/: config.rs  main.rs  reminder.rs  tray.rs
tools/: gen_icon.py
