[package]
name = "blink-rust"
version = "0.1.0"
edition = "2024"
description = "A tiny cross-platform desktop app that reminds you to blink — semi-transparent, click-through reminders at random spots, with a system-tray menu."
authors = ["sylvain-lec <pro@sylvainlecire.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sylvain-lec/blink-reminder"
keywords = ["reminder", "blink", "overlay", "tray", "health"]
categories = ["gui"]

[dependencies]
dirs = "6.0.0"
eframe = "0.34.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tray-icon = "0.24.1"

# Only needed for the macOS accessory-app (no Dock icon) activation policy.
[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"

# Embeds the app icon into the .exe at build time (Windows only).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
